@@ -8,4 +8,5 @@ v1.0.2, 2015-XXX-XX -- Added DES Logo
                     -- Check whether des service file is read/write only by user,
                        otherwise it change access mode
                     -- Added comments from table to describe_table
-                    -- Fix minor issues
+                    -- Added command to add comments to tables and columns
+                    -- Fix minor issues and improve formatting
